--- a/1scust.html
+++ b/1scust.html
@@ -23,5 +23,30 @@
 <img src="images/strat1.jpg" width="80%;">
 <p><strong>KLEV S-Custom Line guitars</strong> are custom-made Fender Stratocaster replicas, built to the highest possible quality.<br>Each S-Custom guitar is 100% made to order, starting from KLEV's signature paint job, all the way to the very bolts used to assemble the guitar.</p><p>  Imagination is the only limit to what a S-Custom guitar can be. Crafted to highly exact standards using cutting-edge industrial processes, KLEV S-Custom guitars guarantee clean, pitch perfect playing and amazing note sustain matching the best limited-series guitars, for a fraction of the price. For the discerning guitar player who wants something truly unique both in terms of looks and sound, there is nothing like the S-Custom.</p>
 
+<p>
+<iframe width="720" height="480" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://klevpractice0217.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+
 </body>
 </html>
