--- a/0index.html
+++ b/0index.html
@@ -5,10 +5,12 @@
 
 <title>KLEV Custom Guitar Shop</title>
 <meta charset="utf-8">
-
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1><a href="0index.html">KLEV</a></h1>
+
+<div id="grid">
 
 <ol>
   <li><a href="1scust.html">S-Custom</a></li>
@@ -16,9 +18,11 @@
   <li><a href="3aria.html">ÆRIA Bass</a></li>
 </ol>
 
+<div id="article">
 <h2>Klev Custom Guitar Shop</h2>
 <p>KLEV started as a passion project between a professor and a student of industrial design.</p>
 <p>United by a love for guitars, the two combined their expertise in various fields of design and manufacturing to create bespoke, high-end guitars like no other. </p>
+</div>
 
 </body>
 </html>
