--- a/1scust.html
+++ b/1scust.html
@@ -5,22 +5,23 @@
 
 <title>KLEV S-Custom</title>
 <meta charset="utf-8">
-
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1><a href="0index.html">KLEV</a></h1>
 
+<div id="grid">
+
 <ol>
-  <li><a href="1scust.html">S-Custom</a></li>
+  <li><a href="1scust.html" id="showing">S-Custom</a></li>
   <li><a href="2tcust.html">T-Custom </a></li>
   <li><a href="3aria.html">ÆRIA Bass</a></li>
 </ol>
 
-
-
+<div id="article">
 <h2>KLEV S-Custom</h2>
 
-<img src="images/strat1.jpg" width="80%;">
+<img src="images/strat1.jpg" width="60%;">
 <p><strong>KLEV S-Custom Line guitars</strong> are custom-made Fender Stratocaster replicas, built to the highest possible quality.<br>Each S-Custom guitar is 100% made to order, starting from KLEV's signature paint job, all the way to the very bolts used to assemble the guitar.</p><p>  Imagination is the only limit to what a S-Custom guitar can be. Crafted to highly exact standards using cutting-edge industrial processes, KLEV S-Custom guitars guarantee clean, pitch perfect playing and amazing note sustain matching the best limited-series guitars, for a fraction of the price. For the discerning guitar player who wants something truly unique both in terms of looks and sound, there is nothing like the S-Custom.</p>
 
 <p>
@@ -46,7 +47,8 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+</div>
+</div>
 
 </body>
 </html>
