--- a/3aria.html
+++ b/3aria.html
@@ -5,21 +5,24 @@
 
 <title>KLEV ÆRIA Bass</title>
 <meta charset="utf-8">
-
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1><a href="0index.html">KLEV</a></h1>
 
+<div id="grid">
 <ol>
   <li><a href="1scust.html">S-Custom</a></li>
   <li><a href="2tcust.html">T-Custom </a></li>
-  <li><a href="3aria.html">ÆRIA Bass</a></li>
+  <li><a href="3aria.html" id="showing">ÆRIA Bass</a></li>
 </ol>
 
+<div id="article">
 <h2>KLEV ÆRIA Bass</h2>
 
-<img src="images/bass1.jpg" width="80%;">
+<img src="images/bass1.jpg" width="60%;">
 <p><strong>The KLEV ÆRIA</strong> is am innovative, superlight concept bass developed for live performances.</p><p>Each T-Custom guitar is 100% made to order, starting from KLEV's signature paint job, all the way to the very bolts used to assemble the guitar.  Imagination is the only limit to what a T-Custom guitar can be.</p><p>Crafted to highly exact standards using cutting-edge industrial processes, KLEV T-Custom guitars guarantee clean, pitch perfect playing and amazing note sustain matching the best limited-series guitars, for a fraction of the price.</p><p>For the discerning guitar player who wants something truly unique both in terms of looks and sound, there is nothing like the T-Custom. </p>
+</div>
 
 </body>
 </html>
